Removed depreciated code 8 -> 16